refactor: Apply Java 25 best practices to engine interfce, procletService, unmarshal, wsif
- YEngineRestorer, YWorkItem: pattern matching instanceof, var locals, switch expressions
- InterfaceB/X engine clients: var locals, collection factory methods
- TemplateOutputGenerator: text blocks for template strings
- procletService interaction graphs: stream toList(), var locals, diamond inference
- YDecompositionParser, YMetaData: var locals, string API modernization
- WSIFInvoker: pattern matching instanceof, var locals

https://claude.ai/code/session_01Q6XzCtWk7ibKmErheFYANF